# seneka_deployment_unit

./: .rosinstall  README.md  ToDo.txt  seneka_bash_aliases.txt
seneka_deployment_unit/: CMakeLists.txt  package.xml
seneka_interactive/: CMakeLists.txt  package.xml
seneka_interactive/common/: .droped-new.txt.swp  .newpackedfront.txt.swp  allSTATES.txt  deployed.txt  droped-new.txt  higherPrePack.txt  newPrePack.txt  newpackedfront.txt  newprepack.txt  packed.txt  test.txt
seneka_interactive/include/: seneka_interactive_tools.h
seneka_interactive/src/: seneka_interactive.cpp
seneka_interactive/srv/: createNewState.srv  evaluateIK.srv  generateIK.srv  getJointStates.srv  getStates.srv  printStatesToFile.srv  setConstraints.srv  setJointState.srv  setStartState.srv  simulate.srv  toggleArmFreeze.srv
seneka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
seneka_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  seneka_ugv.srdf  sugv.srdf
seneka_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  sugv_moveit_controller_manager.launch  trajectory_execution.launch  warehouse.launch
seneka_msgs/: CMakeLists.txt  package.xml
seneka_msgs/msg/: Fiducial.msg  Fiducial.msg~  FiducialArray.msg  FiducialArray.msg~
seneka_msgs/test/: msg_publisher.cpp  msg_publisher.cpp~
seneka_pnp/: CMakeLists.txt  package.xml
seneka_pnp/action/: QuanjoManipulation.action  quanjo_manipulation_action.action
seneka_pnp/common/: gnuplot.txt  seneka_pnp_statemachine.dia  teached_dual_arm_movement.def  teached_dual_arm_movement_actualteach.def  teached_dual_arm_movement_copy.def
seneka_pnp/include/: QuanjoArmSupervisor.h  seneka_pnp_tools.h
seneka_pnp/launch/: seneka_pnp.launch
seneka_pnp/msg/: quanjo_manipulation.msg
seneka_pnp/src/: QuanjoArmSupervisor.cpp  seneka_pnp.cpp  seneka_pnp_tools.cpp  seneka_teach.cpp
seneka_pnp/srv/: getState.srv  setStop.srv  setTransition.srv
seneka_pnp_planner/: CMakeLists.txt  package.xml
seneka_scenarios/: thin_client.py
seneka_scenarios_quanjo/: CMakeLists.txt  package.xml  thin_client.py
seneka_sensornode_detection/: CMakeLists.txt  package.xml
seneka_sensornode_detection/launch/: calibration_ext.yaml  fiducial_poses.def  move_planner.launch  operator.launch  sensornode_detection.launch  sensorsonde_coordinates.def  sensorsonde_coordinates_backup.def  sensorsonde_coordinates_sim.def
seneka_sensornode_detection/src/: sensornode_detection.cpp  sensornode_move_planner.cpp  sensornode_operator.cpp
seneka_sensornode_detection/srv/: calibrateCamera.srv  compensateInaccuracy.srv  getCameraPose.srv  getExtCalibration.srv  setCameraPose.srv  setSensornodePose.srv
seneka_ugv_description/: CMakeLists.txt  package.xml
seneka_ugv_description/meshes/: Mockup_simplified.dae
seneka_ugv_description/seneka_bringup/launch/: ugv_bringup.launch  ugv_bringup_l.launch  ugv_upload.launch
seneka_ugv_description/seneka_gazebo/controller/: ugv_controller.yaml
seneka_ugv_description/seneka_gazebo/launch/: ugv.launch  ugv_clean.launch
seneka_ugv_description/urdf/: sensornode.gazebo.xacro  sensornode.urdf.xacro  ugv.urdf.xacro  ugv.urdf.xacro~  ugv_robot.urdf.xacro  ugv_robot.urdf.xacro~
