<?xml version="1.0"?>
<package>
  <name>seneka_interactive</name>
  <version>0.0.0</version>
  <description>The seneka_interactive package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="Matthias.Gruhler@ipa.fraunhofer.de">Matthias Gruhler</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPL</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="Matthias.Noesner@ipa.fraunhofer.de">Matthias Noesner</author>

   <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>seneka_pnp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>seneka_pnp</run_depend>

</package>




