<?xml version="1.0"?>
<package>
  <name>seneka_ugv_description</name>
  <version>0.0.0</version>
  <description>The seneka_ugv_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="Matthias.Gruhler@ipa.fraunhofer.de">Matthias Gruhler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPL</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="Matthias.Noesner@ipa.fraunhofer.de">Matthias Noesner</author>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
